save ml frames to db
