# backend/internal/model/ml_frame.go
@@ -2,28 +2,26 @@ package model
 
 import "context"
 
-var FramesTableName = "ml_frames"
+var MlFramesTableName = "ml_frames"
 
 type MlFrame struct {
-	Id              int    `json:"id"`      // serial
-	VideoId         int    `json:"videoId"` // fk
-	FileName        string `json:"fileName"`
-	TimeCode        string `json:"timeCode"`
-	TimeCodeMl      string `json:"timeCodeMl"`
-	DetectedClassId int    `json:"detectedClassId"`
+	Id              int     `json:"id"`      // serial
+	VideoId         int     `json:"videoId"` // fk
+	FileName        string  `json:"fileName"`
+	TimeCode        float64 `json:"timeCode"`
+	TimeCodeMl      float64 `json:"timeCodeMl"`
+	DetectedClassId int     `json:"detectedClassId"`
 }
 
 type MlFrameCreate struct {
-	FileName        string `json:"fileName"`
-	VideoId         int    `json:"videoId"`
-	TimeCode        string `json:"timeCode"`
-	TimeCodeMl      string `json:"timeCodeMl"`
-	DetectedClassId int    `json:"detectedClassId"`
+	FileName        []string `json:"fileName"`
+	VideoId         int      `json:"videoId"`
+	TimeCode        float64  `json:"timeCode"`
+	TimeCodeMl      float64  `json:"timeCodeMl"`
+	DetectedClassId int      `json:"detectedClassId"`
 }
 
 type MlFrameRepository interface {
-	// InsertOne(c context.Context, frameData FrameCreate) error
 	InsertMany(c context.Context, framesData []MlFrameCreate) error
-	FindOne(c context.Context, filter string, value any) (MlFrame, error)
-	FindMany(c context.Context, filter string, value any) ([]MlFrame, error)
+	FindMany(c context.Context, videoId int) ([]MlFrame, error)
 }
